# noob

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
cmake/: custom_compile_flags.cmake  fltk_dep.cmake  gtest_dep.cmake
docs/: Doxyfile
include/: consts.h
include/proc/: ITaskProcessor.h  MessageParser.h  ProcConsts.h  StringParser.h  TaskProcessorFactory.h  TaskProcessor_1.h  TaskProcessor_2.h  TaskProcessor_4.h
include/ssapi/: Connection.h  Consts.h  Data.h  IAcceptable.h  INetwork.h  INetworkService.h  Message.h  NetworkServiceFactory.h  SocketBase.h  TcpClient.h  TcpServer.h  TcpSocketClient.h  TcpSocketServer.h
src/__calc_engine/: CMakeLists.txt
src/__calc_engine/include/: calcengine.h  task_algo.h
src/__calc_engine/src/: calcengine.cpp
src/__proc/: CMakeLists.txt
src/__proc/src/: ITaskProcessor.cpp  MessageParser.cpp  StringParser.cpp  TaskProcessorFactory.cpp  TaskProcessor_1.cpp  TaskProcessor_2.cpp  TaskProcessor_4.cpp  task_algo.cpp
src/__ssapi/: CMakeLists.txt
src/__ssapi/src/: INetwork.cpp  INetworkService.cpp  Message.cpp  NetworkServiceFactory.cpp  SocketBase.cpp  TcpClient.cpp  TcpServer.cpp  TcpSocketClient.cpp  TcpSocketServer.cpp
src/__ssapilib/: CMakeLists.txt
src/__ssapilib/include/: Message.h  TcpClient.h  TcpServer.h  ssapi.h  utils.h
src/__ssapilib/src/: Data.cpp  Message.cpp  TcpClient.cpp  TcpServer.cpp  ssapi_client.cpp  ssapi_server.cpp
src/client/: CMakeLists.txt
src/client/include/: Application.h
src/client/src/: Application.cpp  MainViewController.cpp  main.cpp
src/console_client/: CMakeLists.txt
src/console_client/include/: BaseDialog.h  Cache.h  ConsoleApplication.h  IDialog.h  MainDialog.h  WantPlayAgainDialog.h  utils.h
src/console_client/src/: BaseDialog.cpp  Cache.cpp  ConsoleApplication.cpp  MainDialog.cpp  WantPlayAgainDialog.cpp  main.cpp  utils.cpp
src/graphic_client/: CMakeLists.txt
src/graphic_client/include/: AppConsts.h  Application.h  IViewController.h  MainViewController.h
src/graphic_client/src/: Application.cpp  IViewController.cpp  MainViewController.cpp  main.cpp
src/server/: CMakeLists.txt
src/server/include/: AsyncServer.h  IMessageHandler.h  JsonObject.h  MessageHandler.h  MessageQueue.h  ServerApplication.h  ServerConsts.h  TcpServerSocket.h
src/server/src/: AsyncServer.cpp  JsonObject.cpp  MessageHandler.cpp  ServerApplication  ServerApplication.cpp  TcpServerSocket.cpp  main.cpp
src/server/tmp/: AsyncServer.cpp  AsyncServer.h  JsonObject.cpp  main.cpp
tests/: CMakeLists.txt
tests/src/: TaskProcessor_1_Tests.cpp  TaskProcessor_2_Tests.cpp  TaskProcessor_4_Tests.cpp
